correción enpoint eliminar y modelos de response
